more spacing issues

--- a/app/globals.css
+++ b/app/globals.css
@@ -184,8 +184,8 @@ body {
   font-size: 5rem;
   color: var(--ketchup-red);
   margin-bottom: 0.5rem;
-  transform: rotate(1deg);
-  margin-left: 1.5rem;
+  /* transform: rotate(1deg); */
+  /* margin-left: 1.5rem; */
 }
 
 /* Subtitle text */
@@ -204,12 +204,22 @@ body {
   font-size: 3rem;
 }
 
-.flex-row {
+.heading-row {
+  display: flex;
+  flex-direction: row;
+  transform: rotate(1deg);
+  margin-left: 1rem;
+  margin-top: 1rem;
+  gap: 0.5rem;
+}
+
+.subtitle-row {
   display: flex;
   flex-direction: row;
   margin-top: -2rem;
-  margin-left: 1rem;
+  margin-left: 1.5rem;
   gap: 0.4rem;
+  transform: rotate(-1deg);
 }
 
 /* Description text */
